add binder todo

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,9 +1,11 @@
-name: physim
+name: ipcoal
 channels:
     - eaton-lab
     - conda-forge
 dependencies:
     - python>=3
-    - toytree
-    - msprime
+    - ipcoal
+
+
+
 
