trying to simplify rtd install to avoid mem error

--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -2,8 +2,8 @@ name: ipcoal
 
 channels:
   - conda-forge
-  - bioconda
-  - eaton-lab
+  # - bioconda
+  # - eaton-lab
 
 dependencies:
   - python>=3
