--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -7,6 +7,11 @@ version: 2
 
 python:
   version: 3
+  install:
+    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+
 # conda:
   # environment: docs/environment.yml
 build:
