added tabix for bgzip and updated toytree

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -21,10 +21,11 @@ requirements:
     - scipy
     - pandas
     - numba
-    - toytree >=1.1.0
+    - toytree >=1.1.4
     - future
     - msprime
     - raxml
+    - tabix
     # - seq-gen
     # - mrbayes
 
